--- a/meta-imx-ecdsa-sec/conf/layer.conf
+++ b/meta-imx-ecdsa-sec/conf/layer.conf
@@ -8,5 +8,5 @@ BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
 BBFILE_COLLECTIONS += "meta-imx-ecdsa-sec"
 BBFILE_PATTERN_meta-imx-ecdsa-sec = "^${LAYERDIR}/"
 BBFILE_PRIORITY_meta-imx-ecdsa-sec = "10"
-LAYERSERIES_COMPAT_meta-imx-ecdsa-sec = "warrior"
+LAYERSERIES_COMPAT_meta-imx-ecdsa-sec = "warrior zeus"
 
