hsm_she_examples: Added MAC code example to exercise tag bit-granularity

--- a/hsm_she_examples/Makefile
+++ b/hsm_she_examples/Makefile
@@ -1,7 +1,7 @@
 
 
 #change only SECO_LIBS_DIR with the path of the seco_libs repo
-SECO_LIBS_DIR = ~/seco_libs
+SECO_LIBS_DIR = ~/imx-seco-libs
 INCLUDEDIR ?= $(SECO_LIBS_DIR)/export/usr/include
 LIBS_DIR = $(SECO_LIBS_DIR)/export/usr/lib
 LIBS = $(LIBS_DIR)/hsm_lib.a $(LIBS_DIR)/seco_nvm_manager.a $(LIBS_DIR)/she_lib.a
