MICRSE-491: Veda security enhancements on 5.15.5_1.0.0 BSP. Recipe supports patch for 4.14.98_2.0.0 and 5.15.5_1.0.0 BSP
Signed-off-by: Suvarna Lekkalapudi <suvarna.lekkalapudi@nxp.com>

--- a/imx_optee_os_security_enhancements/meta-nxp-security-enhancements/conf/layer.conf
+++ b/imx_optee_os_security_enhancements/meta-nxp-security-enhancements/conf/layer.conf
@@ -9,4 +9,5 @@ BBFILE_COLLECTIONS += "meta-nxp-security-enhancements"
 BBFILE_PATTERN_meta-nxp-security-enhancements = "^${LAYERDIR}/"
 BBFILE_PRIORITY_meta-nxp-security-enhancements = "6"
 
-LAYERSERIES_COMPAT_meta-nxp-security-enhancements = "sumo"
+LAYERDEPENDS_meta-nxp-security-enhancements = "core"
+LAYERSERIES_COMPAT_meta-nxp-security-enhancements = "sumo honister"
